--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Jordan Walker</title>
         <meta name="description" content="Jordan Walker Personal Page">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="favicon" href="img/myfavicon.ico">
+        <link rel="shortcut icon" href="img/myfavicon.ico" >
         <link rel="stylesheet" href="css/main.css">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans|Raleway:300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="js/stylesheets/jquery.sidr.light.css">
