added new project section and image

--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
                 <p>This is a quiz app based on a Winter Olympics theme. I played around with jquery accordion and used it to structure the questions. I made use of alerts, to show your result at the end.</p> 
             </div>
         </section>
+        <section id ="rss" class="projects">
+            <h2>My RSS Feeds
+                <a class="project-link" href="http://windbeat.github.io/rss/">
+                    <span class="text">Launch Site ↗</span>
+                </a>
+            </h2>
+            <img class="project-img" src ="img/rss.png">
+            <div class="sidebar">
+                <p>This is a rss app that uses the google feed api. Lately it has been hard to keep up with latest news and trends, so I played around with google's api. I also used Sidr plugin for different categories.</p> 
+            </div>
+        </section>
         <section id ="skills">
             <div id="what-i-know">
                 <h2>What I Know</h2>
