--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </h2>
             <img class="project-img" src ="img/rss.png">
             <div class="sidebar">
-                <p>This is a rss app that uses the google feed api. Lately it has been hard to keep up with latest news and trends, so I played around with google's api. I also used Sidr plugin for different categories.</p> 
+                <p>This is a rss app that uses the google feed api. Lately it has been hard to keep up with latest news and trends, so I played around with google's api. I also used the Sidr  javascript plugin to showcase different categories.</p> 
             </div>
         </section>
         <section id ="skills">
